--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
-    "@popperjs/core": "2.9.1",
+    "@popperjs/core": "2.4.4",
     "@tailwindcss/forms": "0.2.1",
+    "axios": "^0.26.1",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
